# mirishita-info-bot

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  wrangler.sample.toml
.github/workflows/: check.yml
conf/: BOT_TOKEN
src/: callback_types.rs  cmd.rs  constants.rs  handler.rs  kv_cache_wrapper.rs  lib.rs  matsurihi.rs  telegram.rs  types.rs  utils.rs
src/cmd/: card.rs  curr_borders.rs  curr_event.rs  last_borders.rs  last_event.rs  list_characters.rs
